// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ValidationAccount Failed to verify account Renders the component 1`] = `
<v-layout-stub tag="div" align-center="" justify-center="" class="grey lighten-4">
  <v-flex-stub tag="div" xs12="" sm8="" md4="">
    <v-container-stub tag="div">
      <v-layout-stub tag="div" align-center="" justify-center="" column="">
        <v-flex-stub tag="div" class="text-center primary--text">
          <v-img-stub options="[object Object]" position="center center" src="@/assets/logo.png" transition="fade-transition"></v-img-stub> <span class="overline">BETA</span>
        </v-flex-stub>
      </v-layout-stub>
    </v-container-stub>
    <v-card-stub loaderheight="4" tag="div" color="transparent" data-test="accountCreated-card" class="elevation-0">
      <v-card-title-stub class="justify-center">
        Verification Account
      </v-card-title-stub>
      <!---->
      <!---->
      <v-card-text-stub datatest="failed-cardText" data-test="failed-cardText" class="d-flex align-center justify-center">
        There was a problem activating your account. Go to the login page, login to receive
        another email with the activation link.
      </v-card-text-stub>
      <v-card-subtitle-stub datatest="isCloud-card" data-test="isCloud-card" class="d-flex align-center justify-center pa-4 mx-auto pt-2">
        Back to
        <router-link-stub to="[object Object]" tag="a" ariacurrentvalue="page" event="click" class="ml-1">
          Login
        </router-link-stub>
      </v-card-subtitle-stub>
    </v-card-stub>
  </v-flex-stub>
</v-layout-stub>
`;

exports[`ValidationAccount Success to verify account Renders the component 1`] = `
<v-layout-stub tag="div" align-center="" justify-center="" class="grey lighten-4">
  <v-flex-stub tag="div" xs12="" sm8="" md4="">
    <v-container-stub tag="div">
      <v-layout-stub tag="div" align-center="" justify-center="" column="">
        <v-flex-stub tag="div" class="text-center primary--text">
          <v-img-stub options="[object Object]" position="center center" src="@/assets/logo.png" transition="fade-transition"></v-img-stub> <span class="overline">BETA</span>
        </v-flex-stub>
      </v-layout-stub>
    </v-container-stub>
    <v-card-stub loaderheight="4" tag="div" color="transparent" data-test="accountCreated-card" class="elevation-0">
      <v-card-title-stub class="justify-center">
        Verification Account
      </v-card-title-stub>
      <!---->
      <v-card-text-stub datatest="success-cardText" data-test="success-cardText" class="d-flex align-center justify-center">
        Congrats and welcome to ShellHub.
      </v-card-text-stub>
      <!---->
      <v-card-subtitle-stub datatest="isCloud-card" data-test="isCloud-card" class="d-flex align-center justify-center pa-4 mx-auto pt-2">
        Back to
        <router-link-stub to="[object Object]" tag="a" ariacurrentvalue="page" event="click" class="ml-1">
          Login
        </router-link-stub>
      </v-card-subtitle-stub>
    </v-card-stub>
  </v-flex-stub>
</v-layout-stub>
`;
